--- a/views/trangchu.ejs
+++ b/views/trangchu.ejs
@@ -8,28 +8,45 @@
   <script src="socket.io/socket.io.js"></script>
   <script>
 
-    //goi dien len server
-
     const socket = io('http://localhost:3000');
 
-    //lang nghe: on
-    //phat tin hieu: emit
-
-    //lang nghe su kien tu server tra ve
-    socket.on('server-send-data', function(data){
-      $("#noidung").append(data + ', ');
+    socket.on("SERVER-SEND-MAU", function(data){
+      $('body').attr('bgColor', data);
     });
 
     $(document).ready(function(){
-      //khi client click vao div co id la mrA thi se gui du lieu len server
-      $("#mrA").click(function(){
-        socket.emit('client-send-data', 'Hello server!!');
+      $('#do').click(function(){
+        socket.emit("CLIENT-SEND-MAU", "red");
+      });
+      $('#xanh').click(function(){
+        socket.emit("CLIENT-SEND-MAU", "green");
+      });
+      $('#vang').click(function(){
+        socket.emit("CLIENT-SEND-MAU", "yellow");
       });
     });
   </script>
+  <style>
+    #do {
+      width: 100px;
+      height: 100px;
+      background-color: red;
+    }
+    #xanh {
+      width: 100px;
+      height: 100px;
+      background-color: green;
+    }
+    #vang {
+      width: 100px;
+      height: 100px;
+      background-color: yellow;
+    }
+  </style>
 </head>
-<body>
-  <div id="mrA">Click send!!</div>
-  <h2 id="noidung"></h2>
+<body bgcolor="pink">
+  <div id="do"></div>
+  <div id="xanh"></div>
+  <div id="vang"></div>
 </body>
 </html>
